tests/ui/suggestions/recover-missing-turbofish-surrounding-angle-braket.stderr
error: generic parameters without surrounding angle brackets
  --> $DIR/recover-missing-turbofish-surrounding-angle-braket.rs:2:48
   |
LL |     let _ = vec![1, 2, 3].into_iter().collect::Vec<_>();
   |                                                ^^^^^^
   |
help: surround the type parameters with angle brackets
   |
LL |     let _ = vec![1, 2, 3].into_iter().collect::<Vec<_>>();
   |                                                +      +

error: generic parameters without surrounding angle brackets
  --> $DIR/recover-missing-turbofish-surrounding-angle-braket.rs:4:48
   |
LL |     let _ = vec![1, 2, 3].into_iter().collect::Vec<_>>>>();
   |                                                ^^^^^^
   |
help: surround the type parameters with angle brackets
   |
LL -     let _ = vec![1, 2, 3].into_iter().collect::Vec<_>>>>();
LL +     let _ = vec![1, 2, 3].into_iter().collect::<Vec<_>>();
   |

error: generic parameters without surrounding angle brackets
  --> $DIR/recover-missing-turbofish-surrounding-angle-braket.rs:6:48
   |
LL |     let _ = vec![1, 2, 3].into_iter().collect::Vec<_>>>();
   |                                                ^^^^^^
   |
help: surround the type parameters with angle brackets
   |
LL -     let _ = vec![1, 2, 3].into_iter().collect::Vec<_>>>();
LL +     let _ = vec![1, 2, 3].into_iter().collect::<Vec<_>>();
   |

error: generic parameters without surrounding angle brackets
  --> $DIR/recover-missing-turbofish-surrounding-angle-braket.rs:8:48
   |
LL |     let _ = vec![1, 2, 3].into_iter().collect::Vec<_>>();
   |                                                ^^^^^^
   |
help: surround the type parameters with angle brackets
   |
LL |     let _ = vec![1, 2, 3].into_iter().collect::<Vec<_>>();
   |                                                +

error: aborting due to 4 previous errors

